tests/ppapi_browser/bad/ppapi_bad_magic.nmf
{
  "nexes": {
    "x86-32": "ppapi_bad.html",
    "x86-64": "ppapi_bad.html",
    "arm": "ppapi_bad.html",
  }
}
